--- a/chat/package.json
+++ b/chat/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/antsankov/roadbotoChat#readme",
   "dependencies": {
-    "claudia-bot-builder": "^2.0.0"
+    "claudia-bot-builder": "^2.0.0",
+    "redis": "^2.6.3"
   }
 }
