--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 export username= # CDOT username here
 export password= # CDOT password here
-export cache_ip= # hostname of the redis cache
+export hostname= # hostname of the redis cache
+export port= # port of redis cache
